--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vscode-jscad-editor",
-  "displayName": "vscode-jscad-editor",
-  "description": "An experiment to use VSCode for editing and viewing JSCAD files",
+  "name": "vscode-jscad",
+  "displayName": "vscode-jscad",
+  "description": "An extension to use Visual Studio Code for viewing and editing JSCAD files",
   "version": "0.0.2",
   "publisher": "ryx",
   "engines": {
@@ -18,6 +18,22 @@
   "main": "./out/extension",
   "contributes": {
     "configurationDefaults": {},
+    "configuration": {
+      "type": "object",
+      "title": "JSCAD",
+      "properties": {
+        "jscad.defaultFaceColor": {
+          "type": "object",
+          "default": {
+            "r": 1,
+            "g": 0.3,
+            "b": 0.65,
+            "a": 1
+          },
+          "description": "Default color of 3D objects in the editor (expects object with r/g/b/a properties)."
+        }
+      }
+    },
     "commands": [
       {
         "command": "jscadEditor.openPreview",
@@ -53,7 +69,15 @@
           "group": "export"
         }
       ]
-    }
+    },
+    "keybindings": [
+      {
+        "command": "jscadEditor.openPreview",
+        "key": "shift+ctrl+v",
+        "mac": "shift+cmd+v",
+        "when": "resourceExtname == .jscad"
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -64,12 +88,12 @@
     "process-images": "svgo --disable=removeViewBox --enable=removeDimensions -f resources"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^8.10.25",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.18",
     "svgo": "^1.1.1",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.21"
+    "typescript": "^3.2.4",
+    "vscode": "^1.1.28"
   },
   "dependencies": {
     "@jscad/cli": "^1.9.0",
